fixed broken UI in chatroom and account

--- a/client/src/styles/chatroom/main.less
+++ b/client/src/styles/chatroom/main.less
@@ -4,6 +4,9 @@
 @userlist-extralarge-height: 300px;
 
 .chatroom {
+    position: absolute;
+    top: @navbar-height;
+    left: 0px;
     height: calc(100vh - @navbar-height);
 
     @media @lg {
