--- a/client/src/styles/navbar/main.less
+++ b/client/src/styles/navbar/main.less
@@ -1,5 +1,6 @@
 .brand-navbar {
     position: fixed;
+    top: 0px;
     width: 100vw;
     background-color: @tertiary-color;
     border-bottom: 1px solid rgba(@primary-color, 0.2);
